--- a/phase2/src/View/TextEditorForm.form
+++ b/phase2/src/View/TextEditorForm.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="455" height="336"/>
+      <xy x="48" y="54" width="406" height="319"/>
     </constraints>
     <properties/>
     <border type="none" title="title" title-justification="2"/>
@@ -16,15 +16,19 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="94945" class="javax.swing.JTextArea" binding="editTextArea">
+          <scrollpane id="fdd9">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <minimum-size width="-1" height="500"/>
-                <preferred-size width="150" height="500"/>
-              </grid>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-          </component>
+            <border type="none"/>
+            <children>
+              <component id="94945" class="javax.swing.JTextArea" binding="editTextArea">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
       <grid id="9538f" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="true" same-size-vertically="false" hgap="-1" vgap="-1">
